--- a/Caching/Caching.csproj
+++ b/Caching/Caching.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LRUCache.cs" />
     <Compile Include="FIFOCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
