--- a/Caching/Caching.csproj
+++ b/Caching/Caching.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataNode.cs" />
     <Compile Include="LRUCacheBTree.cs" />
     <Compile Include="LRUCache.cs" />
     <Compile Include="FIFOCache.cs" />
