--- a/src/Test/Test.csproj
+++ b/src/Test/Test.csproj
@@ -2,11 +2,11 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Inputty" Version="1.0.5" />
+		<PackageReference Include="Inputty" Version="1.0.12" />
 	</ItemGroup>
 
 	<ItemGroup>
