NuGet v3.1.3, retarget, update

--- a/src/Caching/Caching.csproj
+++ b/src/Caching/Caching.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Caching</PackageId>
-		<Version>3.1.2</Version>
+		<Version>3.1.3</Version>
 		<Authors>Joel Christner</Authors>
 		<Description>Simple C# caching library including a FIFO and LRU cache</Description>
-		<Copyright>(c)2024 Joel Christner</Copyright>
+		<Copyright>(c)2025 Joel Christner</Copyright>
 		<PackageProjectUrl>https://github.com/jchristn/caching</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/jchristn/caching</RepositoryUrl>
 		<RepositoryType>Github</RepositoryType>
@@ -20,7 +20,15 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<DocumentationFile>Caching.xml</DocumentationFile>
+		<ApplicationIcon>icon.ico</ApplicationIcon>
+		<Title>Caching</Title>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Content Include="icon.ico" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
